--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "python-akeneo-cli"]
-	path = python-akeneo-cli
+[submodule "cli"]
+	path = cli
 	url = https://github.com/tsolenthaler/python-akeneo-cli
